--- a/Home/index.html
+++ b/Home/index.html
@@ -36,7 +36,7 @@
             <!-- Location (text-based) -->
             <div class="location">
                 <span class="location-dot"></span>
-                <span>BANGALORE</span>
+                <span>TVM</span>
             </div>
 
             <button class="nav-btn" onclick="document.getElementById('qr-section').scrollIntoView({ behavior: 'smooth' })">
@@ -523,6 +523,12 @@
         <li><a href="#">Terms & conditions</a></li>
       </ul>
     </div>
+
+    <img
+        src="qr.png"
+        alt="Scan to open Base Performance Web App"
+        class="promo-qr"
+      >
 
 
       <div class="social-icons">
