--- a/Home/index.html
+++ b/Home/index.html
@@ -18,7 +18,7 @@
         <div class="nav-left">
             <!-- Logo image only -->
             <img
-                src="Logo.png"
+                src="images/Logo.png"
                 alt="Base Performance"
                 class="logo"
             >
@@ -58,11 +58,11 @@
 
   <!-- Video Background -->
   <video class="hero-video" autoplay muted loop playsinline>
-    <source src="videos/Rain.mp4" type="video/mp4">
+    <source src="videos/gym,.mp4" type="video/mp4">
   </video>
 
   <!-- Dark Overlay -->
-  <div class="hero-overlay"></div>
+  <!-- <div class="hero-overlay"></div> -->
 
   <!-- Content -->
   <div class="hero-content">
@@ -198,7 +198,7 @@
         </div>
 
         <div class="plan-image-wrap elite">
-            <img src="Elite.jpg" alt="Elite Workout">
+            <img src="images/Elite.jpg" alt="Elite Workout">
             <div class="image-overlay"></div>
         </div>
 
@@ -221,7 +221,7 @@
         </div>
 
         <div class="plan-image-wrap pro">
-            <img src="Pro.jpg" alt="Pro Workout">
+            <img src="images/Pro.jpg" alt="Pro Workout">
             <div class="image-overlay"></div>
         </div>
 
@@ -244,7 +244,7 @@
         </div>
 
         <div class="plan-image-wrap play">
-            <img src="supreme.jpg" alt="Play Sports">
+            <img src="images/supreme.jpg" alt="Play Sports">
             <div class="image-overlay"></div>
         </div>
 
@@ -278,25 +278,25 @@
                 <div class="cat-arrow"><i class="fas fa-chevron-right"></i></div>
                 <h3>Base Performance transform</h3>
                 <p>Get coached to lose weight for good</p>
-                <img src="loseweight.png" class="cat-bg-img" style="filter: grayscale(1); opacity:0.5;" alt="Scale">
+                <img src="images/loseweight.png" class="cat-bg-img" style="filter: grayscale(1); opacity:0.5;" alt="Scale">
             </div>
             <div class="cat-card bg-mind">
                 <div class="cat-arrow"><i class="fas fa-chevron-right"></i></div>
                 <h3>The .fit way</h3>
                 <p>Making health easy, one day at a time</p>
-                <img src="mentalclutter.png" class="cat-bg-img" style="filter: brightness(0.5); opacity:0.5;" alt="Mind">
+                <img src="images/mentalclutter.png" class="cat-bg-img" style="filter: brightness(0.5); opacity:0.5;" alt="Mind">
             </div>
             <div class="cat-card bg-gear">
                 <div class="cat-arrow"><i class="fas fa-chevron-right"></i></div>
                 <h3>Workout Gear</h3>
                 <p>Everything you need for your workout</p>
-                <img src="girl fit.png" class="cat-bg-img" style="right: -50px;" alt="Gear">
+                <img src="images/girl fit.png" class="cat-bg-img" style="right: -50px;" alt="Gear">
             </div>
             <div class="cat-card bg-sugar">
                 <div class="cat-arrow"><i class="fas fa-chevron-right"></i></div>
                 <h3>Sugar.fit</h3>
                 <p>Reverse Type 2 Diabetes and Prediabetes</p>
-                <img src="sugarcheck.jpg" class="cat-bg-img" style="opacity:0.6;" alt="Sugar">
+                <img src="images/sugarcheck.jpg" class="cat-bg-img" style="opacity:0.6;" alt="Sugar">
             </div>
         </div>
     </section>
@@ -321,27 +321,27 @@
     <div class="wellness-grid">
 
       <div class="well-card tall">
-        <img src="joggers.png" alt="Joggers">
+        <img src="images/joggers.png" alt="Joggers">
         <span class="label">Joggers</span>
       </div>
 
       <div class="well-card">
-        <img src="T-shirt.png" alt="Tshirts">
+        <img src="images/T-shirt.png" alt="Tshirts">
         <span class="label">Tshirts</span>
       </div>
 
       <div class="well-card">
-        <img src="Spbra.png" alt="Sports Bra">
+        <img src="images/Spbra.png" alt="Sports Bra">
         <span class="label">Sports Bra</span>
       </div>
 
       <div class="well-card">
-        <img src="yogapants.png" alt="Yoga Pants">
+        <img src="images/yogapants.png" alt="Yoga Pants">
         <span class="label">Yoga Pants</span>
       </div>
 
       <div class="well-card tall">
-        <img src="sweshirt.png" alt="Sweatshirt">
+        <img src="images/sweshirt.png" alt="Sweatshirt">
         <span class="label">Sweatshirt</span>
       </div>
 
@@ -375,7 +375,7 @@
 
       <!-- QR CODE ONLY -->
       <img
-        src="qr.png"
+        src="images/qr.png"
         alt="Scan to open Base Performance Web App"
         class="promo-qr"
       >
@@ -384,7 +384,7 @@
     <!-- RIGHT IMAGE -->
     <div class="app-images">
       <img
-        src="our app.jpg"
+        src="images/our app.jpg"
         alt="Base Performance Web App Preview"
         class="app-phone"
       >
@@ -525,7 +525,7 @@
     </div>
 
     <img
-        src="qr.png"
+        src="images/qr.png"
         alt="Scan to open Base Performance Web App"
         class="promo-qr"
       >
