--- a/Home/index.html
+++ b/Home/index.html
@@ -24,9 +24,9 @@
             >
 
             <div class="nav-links">
-                <a href="#fitness">FITNESS</a>
-                <a href="#sports">SPORTS</a>
-                <a href="#store">STORE</a>
+                <a href="../Fitness/index.html">FITNESS</a>
+                <a href="index.html">SPORTS</a>
+                <!-- <a href="#store">STORE</a> -->
             </div>
         </div>
 
