--- a/Fitness/index.html
+++ b/Fitness/index.html
@@ -20,9 +20,9 @@
                 <img src="images/Logo.png" alt="Base Performance" class="logo">
 
                 <div class="nav-links">
-                    <a href="#fitness">FITNESS</a>
-                    <a href="#sports">SPORTS</a>
-                    <a href="#store">STORE</a>
+                    <a href="index.html">FITNESS</a>
+                    <a href="../index.html">SPORTS</a>
+                    <!-- <a href="#store">STORE</a> -->
                 </div>
             </div>
 
