--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <!-- Content -->
     <div class="hero-content relative z-10 h-full flex flex-col items-center justify-center text-white px-6">
         <h1 class="text-7xl md:text-9xl mb-6 text-center font-bold opacity-0">
-            Base Performance
+            Welcome to Base
         </h1>
 
         <p class="text-2xl md:text-4xl text-center mb-12 max-w-3xl opacity-0">
-            Transform your body. Elevate your game.
+            Build. Accelerate. Sustain. Evolve.
         </p>
 
         <button class="cta-button opacity-0">
@@ -86,7 +86,7 @@
     <section id="reveal-section" class="relative h-[200vh]">
         <div class="sticky top-0 h-screen overflow-hidden">
             <div class="reveal-bg absolute inset-0">
-                <div class="w-full h-full bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1760114852799-159fe9dccfa9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxhdGhsZXRpYyUyMHBlcmZvcm1hbmNlJTIwdHJhaW5pbmd8ZW58MXx8fHwxNzY4NzM4ODczfDA&ixlib=rb-4.1.0&q=80&w=1080&utm_source=figma&utm_medium=referral')"></div>
+                <div class="w-full h-full bg-cover bg-center" style="background-image: url('images/startshere.jpeg')"></div>
                 <div class="absolute inset-0 bg-black/40"></div>
             </div>
 
@@ -154,12 +154,13 @@
         <section class="sticky-section h-screen flex items-center justify-center sticky top-0 bg-white">
             <div class="sticky-content max-w-7xl mx-auto px-6 w-full flex flex-col md:flex-row items-center gap-12 opacity-0">
                 <div class="flex-1">
-                    <h2 class="text-5xl md:text-7xl mb-6 font-bold">Group Classes</h2>
-                    <p class="text-xl md:text-2xl text-gray-600">Energy, motivation, and results. Join high-intensity group sessions that make fitness fun.</p>
+                    <h2 class="text-5xl md:text-7xl mb-6 font-bold">Lockers and Changings Rooms</h2>
+                    <p class="text-xl md:text-2xl text-gray-600">Comfort, privacy, and convenience.
+Spacious lockers and modern changing rooms designed for a seamless workout experience.</p>
                 </div>
                 <div class="flex-1">
                     <div class="relative h-[400px] md:h-[600px] rounded-3xl overflow-hidden shadow-2xl">
-                        <img src="images/groupcls.jpg" alt="Classes" class="w-full h-full object-cover">
+                        <img src="images/changingroom.jpeg" alt="Classes" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
@@ -181,14 +182,14 @@
         playsinline
         preload="auto"
     >
-        <source src="gym.mp4" type="video/mp4">
+        <source src="BASE Gym Reel 02 2.mp4" type="video/mp4">
     </video>
 
         
-        <div class="parallax-content relative z-10 h-full flex flex-col items-center justify-center text-white px-6">
+        <!-- <div class="parallax-content relative z-10 h-full flex flex-col items-center justify-center text-white px-6">
             <h2 class="text-5xl md:text-8xl mb-6 text-center max-w-4xl font-bold">Push Your Limits</h2>
             <p class="text-xl md:text-3xl text-center max-w-2xl">Every rep counts. Every session matters.</p>
-        </div>
+        </div> -->
     </section>
 
     <!-- Courts Section -->
@@ -444,7 +445,7 @@
     <!-- Final CTA Parallax -->
     <section class="parallax-section relative h-screen overflow-hidden">
         <div class="parallax-bg absolute inset-0 w-full h-[120%]">
-            <div class="w-full h-full bg-cover bg-center" style="background-image: url('images/court.jpeg')"></div>
+            <div class="w-full h-full bg-cover bg-center" style="background-image: url('images/nightgym.png')"></div>
             <div class="absolute inset-0 bg-black/40"></div>
         </div>
         
