--- a/contactus.html
+++ b/contactus.html
@@ -465,86 +465,33 @@
     <nav id="navbar" class="navbar">
       <div class="max-w-7xl mx-auto px-6 py-4">
         <div class="flex items-center justify-between">
-          <div class="flex items-center gap-2 text-white">
+          <div class="flex items-center gap-2 text-white"><a href="index.html">
             <img src="images/Logo.png" alt="Logo" class="logo" />
+            </a>
           </div>
 
           <!-- Desktop Menu -->
-          <div class="hidden md:flex items-center gap-8">
-            <a
-              href="index.html"
-              class="text-white hover:text-blue transition-colors"
-              >Home</a
-            >
-            <a
-              href="index.html#facilities"
-              class="text-white hover:text-orange-500 transition-colors"
-              >Facilities</a
-            >
-            <a
-              href="index.html#courts"
-              class="text-white hover:text-orange-500 transition-colors"
-              >Courts</a
-            >
-            <a
-              href="index.html#membership"
-              class="text-white hover:text-orange-500 transition-colors"
-              >Membership</a
-            >
-            <a
-              href="Aboutus.html"
-              class="block text-white hover:text-orange-500 py-2 transition-colors"
-              >About Us</a
-            >
-          </div>
+                <div class="hidden md:flex items-center gap-8">
+                    <a href="index.html" class="text-white hover:text-orange-500 transition-colors">Home</a>
+                    <a href="Aboutus.html" class="text-white hover:text-blue transition-colors">About Us</a>
+                    <a href="contactus.html" class="text-white hover:text-orange-500 transition-colors">Contact Us</a>
+                </div>
 
-          <!-- Mobile Menu Button -->
-          <button id="mobile-menu-btn" class="md:hidden text-white">
-            <svg
-              class="w-6 h-6"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16"
-              ></path>
-            </svg>
-          </button>
-        </div>
+                <!-- Mobile Menu Button -->
+                <button id="mobile-menu-btn" class="md:hidden text-black">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+            </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4">
-          <a
-            href="index.html"
-            class="block text-white hover:text-orange-500 py-2 transition-colors"
-            >Home</a
-          >
-          <a
-            href="index.html#facilities"
-            class="block text-white hover:text-orange-500 py-2 transition-colors"
-            >Facilities</a
-          >
-          <a
-            href="index.html#courts"
-            class="block text-white hover:text-orange-500 py-2 transition-colors"
-            >Courts</a
-          >
-          <a
-            href="index.html#membership"
-            class="block text-white hover:text-orange-500 py-2 transition-colors"
-            >Membership</a
-          >
-          <a
-            href="Aboutus.html"
-            class="block text-white hover:text-orange-500 py-2 transition-colors"
-            >About Us</a
-          >
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4">
+                <a href="index.html" class="block text-white hover:text-orange-500 py-2 transition-colors">Home</a>
+                <a href="Aboutus.html" class="text-white hover:text-blue transition-colors">About Us</a>
+                <a href="contactus.html" class="block text-white hover:text-orange-500 py-2 transition-colors">Contact Us</a>
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="hero">
