--- a/contactus.html
+++ b/contactus.html
@@ -438,6 +438,188 @@
         line-height: 1.6;
       }
 
+      /* Map Location Section */
+      .map-section {
+        background: #ffffff;
+        padding: 80px 20px;
+      }
+
+      .map-container {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+
+      .map-title {
+        text-align: center;
+        font-size: 2.5rem;
+        color: #4299e1;
+        margin-bottom: 15px;
+        font-weight: bold;
+      }
+
+      .map-subtitle {
+        text-align: center;
+        color: #718096;
+        font-size: 1.1rem;
+        margin-bottom: 40px;
+      }
+
+      .map-wrapper {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        border-radius: 15px;
+        box-shadow: 0 10px 30px rgba(66, 153, 225, 0.1);
+        margin-bottom: 50px;
+      }
+
+      .map-iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 15px;
+      }
+
+      .location-details {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 30px;
+        margin-top: 50px;
+      }
+
+      .location-card {
+        background: #f7fafc;
+        padding: 30px;
+        border-radius: 15px;
+        text-align: center;
+        transition: all 0.3s ease;
+        border: 1px solid #e2e8f0;
+      }
+
+      .location-card:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 15px 40px rgba(66, 153, 225, 0.15);
+        border-color: #4299e1;
+      }
+
+      .location-card i {
+        font-size: 2.5rem;
+        color: #4299e1;
+        margin-bottom: 15px;
+        display: block;
+      }
+
+      .location-card h3 {
+        font-size: 1.3rem;
+        color: #2d3748;
+        margin-bottom: 10px;
+        font-weight: 600;
+      }
+
+      .location-card p {
+        color: #4a5568;
+        line-height: 1.8;
+        font-size: 0.95rem;
+      }
+
+      /* Responsive Map Section */
+      @media (max-width: 768px) {
+        .map-section {
+          padding: 50px 20px;
+        }
+
+        .map-title {
+          font-size: 2rem;
+          margin-bottom: 10px;
+        }
+
+        .map-subtitle {
+          font-size: 1rem;
+          margin-bottom: 30px;
+        }
+
+        .location-details {
+          gap: 20px;
+          margin-top: 30px;
+        }
+
+        .location-card {
+          padding: 20px;
+        }
+
+        .location-card i {
+          font-size: 2rem;
+          margin-bottom: 10px;
+        }
+
+        .location-card h3 {
+          font-size: 1.1rem;
+        }
+
+        .location-card p {
+          font-size: 0.9rem;
+        }
+      }
+
+      /* Tablet Responsive */
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .map-section {
+          padding: 60px 30px;
+        }
+
+        .map-title {
+          font-size: 2.2rem;
+        }
+
+        .location-details {
+          gap: 25px;
+          margin-top: 40px;
+        }
+      }
+
+      /* Extra Large Screens */
+      @media (min-width: 1441px) {
+        .map-section {
+          padding: 100px 40px;
+        }
+
+        .map-title {
+          font-size: 3rem;
+          margin-bottom: 20px;
+        }
+
+        .map-subtitle {
+          font-size: 1.3rem;
+          margin-bottom: 50px;
+        }
+
+        .location-details {
+          gap: 40px;
+          margin-top: 60px;
+        }
+
+        .location-card {
+          padding: 40px;
+        }
+
+        .location-card i {
+          font-size: 3rem;
+          margin-bottom: 20px;
+        }
+
+        .location-card h3 {
+          font-size: 1.5rem;
+        }
+
+        .location-card p {
+          font-size: 1rem;
+        }
+      }
       ::-webkit-scrollbar {
         width: 10px;
       }
@@ -645,6 +827,24 @@
         </div>
       </div>
     </div>
+
+    <!-- Map Location Section -->
+    <section class="map-section">
+      <div class="map-container">
+        <h2 class="map-title">Visit Us</h2>
+        <p class="map-subtitle">Find our location and get directions</p>
+        <div class="map-wrapper">
+          <iframe
+            class="map-iframe"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9370.081051723982!2d76.91062695000001!3d8.567386749999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bed62ee928d1%3A0x758c0cf00672fc9a!2sChempazhanthy%2C%20Thiruvananthapuram%2C%20Kerala!5e1!3m2!1sen!2sin!4v1769020340288!5m2!1sen!2sin"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+
+        </div>
+        </section>
 
     <!-- FOOTER -->
     <footer class="main-footer">
