--- a/contactus.html
+++ b/contactus.html
@@ -836,7 +836,7 @@
         <div class="map-wrapper">
           <iframe
             class="map-iframe"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9370.081051723982!2d76.91062695000001!3d8.567386749999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bed62ee928d1%3A0x758c0cf00672fc9a!2sChempazhanthy%2C%20Thiruvananthapuram%2C%20Kerala!5e1!3m2!1sen!2sin!4v1769020340288!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4685.042210451678!2d76.91394439999999!3d8.567250000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMzQnMDIuMSJOIDc2wrA1NCc1MC4yIkU!5e1!3m2!1sen!2sin!4v1769059982712!5m2!1sen!2sin"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
@@ -930,7 +930,7 @@
       // REPLACE THIS WITH YOUR GOOGLE APPS SCRIPT WEB APP URL
       // Google Apps Script Web App URL
       const scriptURL =
-        "https://script.google.com/macros/s/AKfycbxiOxAO5B_t2R4gwdVVvL77RKEmqAJulpVnpa3aU_pUEwHO8QVIBXICmohB2NeNJt0V/exec";
+        "https://script.google.com/macros/s/AKfycbyG41j56m89L3sVgW28dRiwbHt1GnVyspAbBkoqYIRlR4cfOmUy1kE5X1RU0BJFO3Kf/exec";
 
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
