--- a/Aboutus.html
+++ b/Aboutus.html
@@ -586,9 +586,10 @@
 
     <div class="stats">
       <div class="stats-container">
+          
         <div class="stat-item animate-on-scroll">
           <span class="stat-number" data-target="100">0</span>
-          <span class="stat-label">Partner Facilities</span>
+          <span class="stat-label">Active Users</span>
         </div>
     
         <div class="stat-item animate-on-scroll">
