--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
               class="text-white hover:text-orange-500 transition-colors"
               >Contact Us</a
             >
+            <button
+              onclick="window.location.href='#'; return false;"
+              class="bg-orange-500 text-white px-6 py-2 rounded-full hover:bg-orange-600 transition-all font-semibold"
+            >Login</button
+            >
+
           </div>
 
           <!-- Mobile Menu Button -->
@@ -74,7 +80,11 @@
             class="block text-white hover:text-orange-500 py-2 transition-colors"
             >Contact Us</a
           >
-        </div>
+          <button
+            onclick="window.location.href='#'; return false;"
+            class="w-full text-left bg-orange-500 text-white px-4 py-2 rounded-full mt-2 hover:bg-orange-600 transition-all font-semibold"
+          >Login</button
+          >
       </div>
     </nav>
 
@@ -488,11 +498,16 @@
             class="promo-qr"
           />
           <div class="social-icons">
-            <i class="fab fa-youtube"></i>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin-in"></i>
+            <!-- <i class="fab fa-youtube"></i> -->
+            <!-- <i class="fab fa-facebook-f"></i> -->
+            <!-- <i class="fab fa-twitter"></i> -->
+            <a href="https://www.instagram.com/baseperformanceofficial?igsh=b3RheHp3dzM0YWhn" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://wa.me/917356289930" target="_blank">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <!-- <i class="fab fa-linkedin-in"></i> -->
           </div>
         </div>
       </div>
