--- a/Aboutus.html
+++ b/Aboutus.html
@@ -535,9 +535,14 @@
 
           <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center gap-8">
-                    <a href="index.html" class="text-white hover:text-orange-500 transition-colors">Home</a>
+                    <a href="index.html" class="text-white hover:text-blue-500 transition-colors">Home</a>
                     <a href="Aboutus.html" class="text-white hover:text-blue transition-colors">About Us</a>
-                    <a href="contactus.html" class="text-white hover:text-orange-500 transition-colors">Contact Us</a>
+                    <a href="contactus.html" class="text-white hover:text-blue-500 transition-colors">Contact Us</a>
+                    <button
+                      onclick="window.location.href='#'; return false;"
+                      class="bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition-all font-semibold"
+                    >Login</button
+                    >
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -550,9 +555,14 @@
 
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4">
-                <a href="index.html" class="block text-white hover:text-orange-500 py-2 transition-colors">Home</a>
+                <a href="index.html" class="block text-white hover:text-blue-500 py-2 transition-colors">Home</a>
                 <a href="Aboutus.html" class="text-white hover:text-blue transition-colors">About Us</a>
-                <a href="contactus.html" class="block text-white hover:text-orange-500 py-2 transition-colors">Contact Us</a>
+                <a href="contactus.html" class="block text-white hover:text-blue-500 py-2 transition-colors">Contact Us</a>
+                <button
+                  onclick="window.location.href='#'; return false;"
+                  class="w-full text-left bg-blue-500 text-white px-4 py-2 rounded-full mt-2 hover:bg-blue-600 transition-all font-semibold"
+                >Login</button
+                >
             </div>
         </div>
     </nav>
@@ -620,11 +630,16 @@
             class="promo-qr"
           />
           <div class="social-icons">
-            <i class="fab fa-youtube"></i>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin-in"></i>
+            <!-- <i class="fab fa-youtube"></i> -->
+            <!-- <i class="fab fa-facebook-f"></i> -->
+            <!-- <i class="fab fa-twitter"></i> -->
+            <a href="https://www.instagram.com/baseperformanceofficial?igsh=b3RheHp3dzM0YWhn" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://wa.me/917356289930" target="_blank">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <!-- <i class="fab fa-linkedin-in"></i> -->
           </div>
         </div>
       </div>
