--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
       <!-- Carousel Background -->
       <div class="hero-bg absolute inset-0">
         <div class="hero-carousel">
-          <img src="images/corosel1.jpeg" class="carousel-img active" />
+          <img src="images/corosel01.jpeg" class="carousel-img active" />
           <img src="images/neverbefore.jpeg" class="carousel-img" />
           <img src="images/trainingstudio.jpeg" class="carousel-img" />
-          <img src="images/pdf24_converted-images-6.jpg.jpeg" class="carousel-img"/>
+          <!-- <img src="images/pdf24_converted-images-6.jpg.jpeg" class="carousel-img"/> -->
           <img src="images/startshere.jpeg" class="carousel-img"/>
           
         </div>
@@ -135,7 +135,7 @@
         >
           <div class="max-w-5xl mx-auto text-center text-white">
             <h2 class="reveal-title text-5xl md:text-7xl mb-6 font-bold">
-              Your Fitness Revolution Starts Here
+              Training Programs "Programs Engineered for Results"
             </h2>
             <p class="reveal-subtitle text-xl md:text-2xl mb-12">
               Experience the ultimate training facility designed for champions
@@ -154,19 +154,28 @@
               <div
                 class="reveal-feature bg-white/10 backdrop-blur-md rounded-2xl p-8"
               >
-                <h3 class="text-2xl mb-3 font-bold">Smart Technology</h3>
+                <h3 class="text-2xl mb-3 font-bold">Athlete Performance Training (sport-specific)</h3>
                 <p class="text-gray-300">
-                  Track every rep, set, and milestone with our advanced fitness
-                  tracking system
+                  Advanced strength, speed, and conditioning programs designed for competitive and 
+                  semi-pro athletes. Includes testing, data tracking, and one-on-one performance coaching.
                 </p>
               </div>
               <div
                 class="reveal-feature bg-white/10 backdrop-blur-md rounded-2xl p-8"
               >
-                <h3 class="text-2xl mb-3 font-bold">Community Driven</h3>
+                <h3 class="text-2xl mb-3 font-bold">General Fitness</h3>
                 <p class="text-gray-300">
-                  Join a community of motivated individuals pushing their limits
-                  every day
+                  Dynamic group and personal sessions that improve strength, mobility, and endurance for everyday athletes.
+                </p>
+              </div>
+               <div
+                class="reveal-feature bg-white/10 backdrop-blur-md rounded-2xl p-8"
+              >
+                <h3 class="text-2xl mb-3 font-bold">Youth Force Development Programs</h3>
+                <p class="text-gray-300">
+                  In strength and conditioning, a Youth Force Development Program refers to a structured, age-appropriate 
+                  training system designed to help young athletes (typically ages 8–18) safely and effectively build foundational 
+                  strength, power, and movement skills that support both athletic performance and long-term physical development.                
                 </p>
               </div>
             </div>
@@ -214,7 +223,7 @@
         >
           <div class="flex-1">
             <h2 class="text-5xl md:text-7xl mb-6 font-bold">
-              High-Performance Badminton Courts
+              Badminton Courts
             </h2>
             <p class="text-xl md:text-2xl text-gray-600">
               Skill-focused training spaces designed for precision, speed, and competitive excellence.
