--- a/Aboutus.html
+++ b/Aboutus.html
@@ -142,7 +142,7 @@
       }
 
       .mission {
-        text-align: center;
+        text-align: left;
         margin-bottom: 80px;
       }
 
@@ -242,7 +242,6 @@
         background: linear-gradient(135deg, #4299e1 0%, #3182ce 100%);
         color: white;
         padding: 80px 20px;
-        margin: 80px 0;
         margin-bottom: 0px;
       }
 
@@ -475,6 +474,24 @@
           font-size: 2rem;
         }
 
+        .mission p {
+          font-size: 1rem;
+        }
+
+        .container {
+          padding: 40px 15px;
+        }
+
+        .mission {
+          margin-bottom: 40px;
+        }
+
+        [style*="text-align: center"] img {
+          max-width: 300px !important;
+          margin-top: 20px !important;
+          margin-bottom: 20px !important;
+        }
+
         .stat-number {
           font-size: 2.5rem;
         }
@@ -519,6 +536,50 @@
 
         .footer-bottom {
           font-size: 0.7rem;
+        }
+      }
+
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .mission p {
+          font-size: 1.1rem;
+        }
+
+        .container {
+          padding: 60px 25px;
+        }
+
+        [style*="text-align: center"] img {
+          max-width: 400px !important;
+          margin-top: 30px !important;
+          margin-bottom: 30px !important;
+        }
+
+        .stat-number {
+          font-size: 3rem;
+        }
+
+        .main-footer {
+          padding: 60px 2rem 40px;
+        }
+
+        .footer-grid {
+          gap: 3rem;
+        }
+      }
+
+      @media (min-width: 1025px) {
+        .container {
+          padding: 80px 20px;
+        }
+
+        [style*="text-align: center"] img {
+          max-width: 500px !important;
+          margin-top: 40px !important;
+          margin-bottom: 40px !important;
+        }
+
+        .mission p {
+          font-size: 1.2rem;
         }
       }
     </style>
@@ -575,24 +636,28 @@
 
     <div class="container">
       <div class="mission">
-        <h2 class="animate-on-scroll">Our Mission</h2>
+        <!-- <h2 class="animate-on-scroll">Our Mission</h2> -->
         <p class="animate-on-scroll">
-          At BASE, we help you build discipline, accelerate results, sustain
-          progress, and evolve your potential — for sport, for life, for you.
-          Whether you’re chasing medals or just a better version of yourself,
-          BASE combines elite coaching, cutting-edge facilities, and community
-          support to help you perform, recover, and thrive.
-          Every session at BASE blends biomechanics, sports science, and intelligent
-          coaching to ensure your training works smarter — not just harder.Our 
-          approach ensures every athlete develops the physical, technical, and
-          mental qualities required to excel in competition. From youth prospects
-          to professional athletes, BASE provides the structure, expertise, and
-          technology to elevate human performance. <br>
-          BASE is where training meets science and commitment becomes confidence. Start your journey at BASE today.
+          <b>“Build. Accelerate. Sustain. Evolve. — BASE” <br> About BASE — The High Performance Centre</b> <br> <br>
+
+BASE is a world-class High Performance Centre engineered exclusively for athletes who demand excellence. <br> <br>
+ At BASE, we help you build discipline, accelerate results, sustain progress, and evolve your potential — for sport, for life, for you. <br>
+ <br>
+
+Whether you’re chasing medals or just a better version of yourself, BASE combines elite coaching, cutting-edge facilities, and community support to help you perform, recover, and thrive. <br>
+<br>
+Every session at BASE blends biomechanics, sports science, and intelligent coaching to ensure your training works smarter — not just harder.<br><br>
+
+Our approach ensures every athlete develops the physical, technical, and mental qualities required to excel in competition. From youth prospects to professional athletes, BASE provides the structure, expertise, and technology to elevate human performance.<br>
+<br>
+BASE is where training meets science and commitment becomes confidence. Start your journey at BASE today.<br>
         </p>
-      </div>
 
       </div>
+      <div style="text-align: center;  display: flex; justify-content: center;align-items: center;">
+        <img src="images/Logo.png" alt="BASE Logo" style="max-width: 300px; width: 100%; height: auto;">
+      </div>
+    </div>
 
     <div class="stats">
       <div class="stats-container">
