--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="max-w-7xl mx-auto px-6 py-2">
         <div class="flex items-center justify-between">
           <div class="flex items-center gap-2 text-white">
-            <div class="logo">
-              <img src="images/Logo.png" alt="Logo" />
+             <div class="logo">
+              <img src="images/logo01.jpeg" alt="Logo" />
             </div>
           </div>
 
@@ -93,7 +93,7 @@
       <!-- Carousel Background -->
       <div class="hero-bg absolute inset-0">
         <div class="hero-carousel">
-          <img src="images/corosel01.jpeg" class="carousel-img active" />
+          <img src="images/corosel1.jpeg" class="carousel-img active" />
           <img src="images/neverbefore.jpeg" class="carousel-img" />
           <img src="images/trainingstudio.jpeg" class="carousel-img" />
           <!-- <img src="images/pdf24_converted-images-6.jpg.jpeg" class="carousel-img"/> -->
