--- a/Aboutus.html
+++ b/Aboutus.html
@@ -140,6 +140,20 @@
         padding: 80px 20px;
         background-color: #ffffff;
       }
+      
+
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.base-logo {
+  width: 100%;
+  max-width: 60%;
+  height: auto;
+}
+
 
       .mission {
         text-align: left;
@@ -376,6 +390,7 @@
         font-size: 0.85rem;
         line-height: 1.6;
         margin-bottom: 1.5rem;
+        text-align: left;
       }
 
       .footer-col h4 {
@@ -652,11 +667,12 @@ Our approach ensures every athlete develops the physical, technical, and mental 
 <br>
 BASE is where training meets science and commitment becomes confidence. Start your journey at BASE today.<br>
         </p>
+        
+        <div class="logo-wrapper">
+    <img src="images/logo01.jpeg" alt="BASE Logo" class="base-logo">
+  </div>
+      </div>
 
-      </div>
-      <div style="text-align: center;  display: flex; justify-content: center;align-items: center;">
-        <img src="images/Logo.png" alt="BASE Logo" style="max-width: 300px; width: 100%; height: auto;">
-      </div>
     </div>
 
     <div class="stats">
