--- a/contactus.html
+++ b/contactus.html
@@ -372,6 +372,7 @@
         font-size: 0.85rem;
         line-height: 1.6;
         margin-bottom: 1.5rem;
+        text-align: left;
       }
 
       .footer-col h4 {
@@ -846,7 +847,7 @@
         <div class="map-wrapper">
           <iframe
             class="map-iframe"
-            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4685.042210451678!2d76.91394439999999!3d8.567250000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMzQnMDIuMSJOIDc2wrA1NCc1MC4yIkU!5e1!3m2!1sen!2sin!4v1769059982712!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4685.042358380453!2d76.91136207501344!3d8.567237991476853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMzQnMDIuMSJOIDc2wrA1NCc1MC4yIkU!5e1!3m2!1sen!2sin!4v1769073475649!5m2!1sen!2sin"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
